--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <!-- FB / LINE 預覽設定：這在 GitHub Pages 下能 100% 發揮作用 -->
-    <meta property="og:title" content="Cinematic Canvas | Aventurine">
+    <meta property="og:title" content="Photo Gallery | Aventurine">
     <meta property="og:description" content="卡卡瓦夏 - 「幸運，從來不是偶然的施捨。」">
     <meta property="og:type" content="website">
     <!-- 下方圖片為 FB 抓取的封面圖 -->
-    <meta property="og:image" content="https://live.staticflickr.com/65535/55036747407_96aaeaa0fb_c.jpg">
+    <meta property="og:image" content="https://live.staticflickr.com/65535/55037653101_ac96d8296e_h.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -433,4 +433,5 @@
         });
     </script>
 </body>
+
 </html>
