--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <!-- FB / LINE 預覽設定 -->
-    <meta property="og:title" content="Cinematic Canvas | Aventurine">
+    <meta property="og:title" content="Canvas | Aventurine">
     <meta property="og:description" content="卡卡瓦夏 - 「幸運，從來不是偶然的施捨。」">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://live.staticflickr.com/65535/55036747407_96aaeaa0fb_c.jpg">
@@ -489,3 +489,4 @@
     </script>
 </body>
 </html>
+
