--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
-    <title>Cinematic Canvas | It's All or Nothing</title>
+    <title>Canvas | It's All or Nothing</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -489,4 +489,5 @@
     </script>
 </body>
 </html>
+
 
