--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <title>Canvas | It's All or Nothing</title>
     
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;500;700&family=Playfair+Display:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
@@ -489,5 +492,6 @@
     </script>
 </body>
 </html>
+
 
 
